[package]
name = "stackable_logging"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.proc_macros]
package = "stackable_logging-proc_macros"
path = "src/proc_macros"
version = "0.1.0"  # Same as main version

[dependencies]
slog = { version = "2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2"
slog-term = "2"
sloggers = "1"
